--- a/_posts/2021-09-24-네이버-API-를-활용한-미니프로젝트(3).md
+++ b/_posts/2021-09-24-네이버-API-를-활용한-미니프로젝트(3).md
@@ -12,7 +12,39 @@ thumbnail: /assets/img/posts/searchservice.PNG
 
 <br>
 
-클라이언트 테스트를 완료 했다면 서비스 패키지를 만들어 서비스 를 지정해주자.
+지역관련 검색 api 를 정의해 주었다면 사진검색 api 도정의해주자.
+
+<br>
+
+이미지검색 요청객체.
+
+<br>
+
+
+
+<img src="/assets/img/posts/searchimagereq.PNG" width="100%" height="100%">
+
+<br>
+
+<br>
+
+이미지검색 응답객체
+
+<br>
+
+<img src="/assets/img/posts/searchimageres.PNG" width="100%" height="100%">
+
+<br><br>
+
+응답,요청 객체를 정의해주었다면 클라이언트에 추가해주자.
+
+<br>
+
+<img src="/assets/img/posts/searchimageclient.PNG" width="100%" height="100%">
+
+<br><br>
+
+클라이언트 테스트까지 완료 해주자. 그후 서비스 패키지를 만들어 서비스 를 지정해주자.
 
 <br><br>
 
@@ -33,3 +65,4 @@ thumbnail: /assets/img/posts/searchservice.PNG
 <br><br>
 
 테스트 클래스를 만들어줄때는 항상 디렉토리 위치를 제대로 설정해 주었는지 확인해주자.
+
